add ability to send text with the image

--- a/DSAS/Form1.ru.resx
+++ b/DSAS/Form1.ru.resx
@@ -117,35 +117,7 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="b_test.Text" xml:space="preserve">
-    <value>Send test</value>
-  </data>
-  <data name="&gt;&gt;tb_msgtext.ZOrder" xml:space="preserve">
-    <value>9</value>
-  </data>
-  <data name="&gt;&gt;l_filter.Name" xml:space="preserve">
-    <value>l_filter</value>
-  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
-  <data name="tb_filter.Size" type="System.Drawing.Size, System.Drawing">
-    <value>42, 20</value>
-  </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="b_browse.TabIndex" type="System.Int32, mscorlib">
-    <value>4</value>
-  </data>
-  <data name="&gt;&gt;trayMenuItem1.Name" xml:space="preserve">
-    <value>trayMenuItem1</value>
-  </data>
-  <data name="&gt;&gt;tb_webhookurl.ZOrder" xml:space="preserve">
-    <value>11</value>
-  </data>
-  <data name="$this.MinimumSize" type="System.Drawing.Size, System.Drawing">
-    <value>452, 160</value>
-  </data>
-  <data name="&gt;&gt;tb_filter.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
   <data name="trayIcon.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAQEAAAAEAIAAoQgAAFgAAACgAAABAAAAAgAAAAAEAIAAAAAAAAEAAABMLAAATCwAAAAAAAAAA
@@ -432,238 +404,6 @@
         AAH/////AAAAA/////8AAAAD/////4AAAAf/////gAAAB//////AAAAP/////+AAAB//////8AAAH///
         ///4AAB///////wAAP///////wAD////////wA////////////8=
 </value>
-  </data>
-  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-  <data name="tb_webhookurl.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Left, Right</value>
-  </data>
-  <data name="l_msgtext.Text" xml:space="preserve">
-    <value>Message text:</value>
-  </data>
-  <data name="&gt;&gt;tb_filter.Name" xml:space="preserve">
-    <value>tb_filter</value>
-  </data>
-  <data name="&gt;&gt;l_scrfolder.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;trayMenuItem2.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;l_webhookurl.Name" xml:space="preserve">
-    <value>l_webhookurl</value>
-  </data>
-  <data name="tb_scrfolder.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Left, Right</value>
-  </data>
-  <data name="tb_scrfolder.Location" type="System.Drawing.Point, System.Drawing">
-    <value>146, 39</value>
-  </data>
-  <data name="l_scrfolder.Size" type="System.Drawing.Size, System.Drawing">
-    <value>112, 13</value>
-  </data>
-  <data name="&gt;&gt;b_test.Name" xml:space="preserve">
-    <value>b_test</value>
-  </data>
-  <data name="&gt;&gt;$this.Name" xml:space="preserve">
-    <value>MainWindow</value>
-  </data>
-  <data name="&gt;&gt;b_browse.ZOrder" xml:space="preserve">
-    <value>5</value>
-  </data>
-  <data name="tb_webhookurl.TabIndex" type="System.Int32, mscorlib">
-    <value>0</value>
-  </data>
-  <data name="&gt;&gt;tb_scrfolder.ZOrder" xml:space="preserve">
-    <value>10</value>
-  </data>
-  <data name="tb_filter.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Right</value>
-  </data>
-  <data name="&gt;&gt;l_scrfolder.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="l_filter.Size" type="System.Drawing.Size, System.Drawing">
-    <value>32, 13</value>
-  </data>
-  <data name="&gt;&gt;trayMenuStrip.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ContextMenuStrip, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;b_test.ZOrder" xml:space="preserve">
-    <value>3</value>
-  </data>
-  <data name="&gt;&gt;tb_webhookurl.Type" xml:space="preserve">
-    <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;tb_filter.ZOrder" xml:space="preserve">
-    <value>1</value>
-  </data>
-  <data name="l_webhookurl.TabIndex" type="System.Int32, mscorlib">
-    <value>2</value>
-  </data>
-  <data name="&gt;&gt;b_test.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="l_scrfolder.Text" xml:space="preserve">
-    <value>Screenshots directory:</value>
-  </data>
-  <data name="$this.AutoScaleDimensions" type="System.Drawing.SizeF, System.Drawing">
-    <value>6, 13</value>
-  </data>
-  <data name="tb_webhookurl.Size" type="System.Drawing.Size, System.Drawing">
-    <value>232, 20</value>
-  </data>
-  <data name="&gt;&gt;folderBrowserDialog1.Type" xml:space="preserve">
-    <value>System.Windows.Forms.FolderBrowserDialog, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="tb_webhookurl.Location" type="System.Drawing.Point, System.Drawing">
-    <value>146, 12</value>
-  </data>
-  <data name="&gt;&gt;tb_filter.Type" xml:space="preserve">
-    <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="trayMenuItem2.Size" type="System.Drawing.Size, System.Drawing">
-    <value>103, 22</value>
-  </data>
-  <data name="&gt;&gt;l_filter.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="l_msgtext.TabIndex" type="System.Int32, mscorlib">
-    <value>3</value>
-  </data>
-  <data name="&gt;&gt;tb_msgtext.Name" xml:space="preserve">
-    <value>tb_msgtext</value>
-  </data>
-  <data name="&gt;&gt;l_webhookurl.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;tb_scrfolder.Type" xml:space="preserve">
-    <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="b_test.TabIndex" type="System.Int32, mscorlib">
-    <value>6</value>
-  </data>
-  <data name="&gt;&gt;trayMenuItem1.Type" xml:space="preserve">
-    <value>System.Windows.Forms.ToolStripMenuItem, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="tb_msgtext.Location" type="System.Drawing.Point, System.Drawing">
-    <value>146, 65</value>
-  </data>
-  <data name="b_startstop.Text" xml:space="preserve">
-    <value>Start</value>
-  </data>
-  <data name="b_browse.Text" xml:space="preserve">
-    <value>Browse</value>
-  </data>
-  <data name="tb_scrfolder.Size" type="System.Drawing.Size, System.Drawing">
-    <value>232, 20</value>
-  </data>
-  <data name="&gt;&gt;l_filter.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;tb_msgtext.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="l_scrfolder.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 42</value>
-  </data>
-  <data name="&gt;&gt;b_startstop.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="trayMenuItem1.Size" type="System.Drawing.Size, System.Drawing">
-    <value>103, 22</value>
-  </data>
-  <data name="&gt;&gt;tb_webhookurl.Name" xml:space="preserve">
-    <value>tb_webhookurl</value>
-  </data>
-  <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="&gt;&gt;l_msgtext.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;tb_scrfolder.Name" xml:space="preserve">
-    <value>tb_scrfolder</value>
-  </data>
-  <data name="&gt;&gt;trayIcon.Type" xml:space="preserve">
-    <value>System.Windows.Forms.NotifyIcon, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="b_browse.Location" type="System.Drawing.Point, System.Drawing">
-    <value>384, 37</value>
-  </data>
-  <data name="&gt;&gt;b_browse.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="l_webhookurl.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 15</value>
-  </data>
-  <data name="&gt;&gt;l_filter.ZOrder" xml:space="preserve">
-    <value>2</value>
-  </data>
-  <data name="&gt;&gt;trayIcon.Name" xml:space="preserve">
-    <value>trayIcon</value>
-  </data>
-  <data name="l_filter.Location" type="System.Drawing.Point, System.Drawing">
-    <value>465, 15</value>
-  </data>
-  <data name="tb_filter.Location" type="System.Drawing.Point, System.Drawing">
-    <value>465, 39</value>
-  </data>
-  <data name="b_startstop.Size" type="System.Drawing.Size, System.Drawing">
-    <value>492, 23</value>
-  </data>
-  <data name="&gt;&gt;l_webhookurl.ZOrder" xml:space="preserve">
-    <value>8</value>
-  </data>
-  <data name="l_filter.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="&gt;&gt;b_startstop.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;l_webhookurl.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="tb_msgtext.Size" type="System.Drawing.Size, System.Drawing">
-    <value>232, 20</value>
-  </data>
-  <data name="&gt;&gt;trayMenuStrip.Name" xml:space="preserve">
-    <value>trayMenuStrip</value>
-  </data>
-  <data name="tb_filter.TabIndex" type="System.Int32, mscorlib">
-    <value>8</value>
-  </data>
-  <data name="&gt;&gt;l_msgtext.ZOrder" xml:space="preserve">
-    <value>6</value>
-  </data>
-  <data name="l_msgtext.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="b_startstop.Location" type="System.Drawing.Point, System.Drawing">
-    <value>16, 91</value>
-  </data>
-  <data name="trayMenuItem2.Text" xml:space="preserve">
-    <value>Close</value>
-  </data>
-  <data name="l_webhookurl.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="$this.MaximumSize" type="System.Drawing.Size, System.Drawing">
-    <value>1500, 160</value>
-  </data>
-  <data name="&gt;&gt;trayMenuItem2.Name" xml:space="preserve">
-    <value>trayMenuItem2</value>
-  </data>
-  <data name="b_browse.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Right</value>
-  </data>
-  <data name="&gt;&gt;folderBrowserDialog1.Name" xml:space="preserve">
-    <value>folderBrowserDialog1</value>
-  </data>
-  <data name="&gt;&gt;l_scrfolder.ZOrder" xml:space="preserve">
-    <value>7</value>
-  </data>
-  <data name="&gt;&gt;b_startstop.Name" xml:space="preserve">
-    <value>b_startstop</value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -952,124 +692,8 @@
         ///4AAB///////wAAP///////wAD////////wA////////////8=
 </value>
   </data>
-  <data name="tb_msgtext.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Left, Right</value>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>Inherit</value>
   </data>
-  <data name="b_browse.Size" type="System.Drawing.Size, System.Drawing">
-    <value>75, 22</value>
-  </data>
-  <data name="&gt;&gt;b_browse.Name" xml:space="preserve">
-    <value>b_browse</value>
-  </data>
-  <data name="b_test.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Right</value>
-  </data>
-  <data name="l_webhookurl.Size" type="System.Drawing.Size, System.Drawing">
-    <value>82, 13</value>
-  </data>
-  <data name="l_filter.TabIndex" type="System.Int32, mscorlib">
-    <value>7</value>
-  </data>
-  <data name="b_startstop.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Left, Right</value>
-  </data>
-  <data name="trayMenuItem1.Text" xml:space="preserve">
-    <value>Start</value>
-  </data>
-  <data name="&gt;&gt;b_test.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="folderBrowserDialog1.Description" xml:space="preserve">
-    <value>Выберите папку со скриншотами</value>
-  </data>
-  <data name="&gt;&gt;tb_webhookurl.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="l_filter.Text" xml:space="preserve">
-    <value>Filter:</value>
-  </data>
-  <data name="trayIcon.Text" xml:space="preserve">
-    <value>DSAS</value>
-  </data>
-  <data name="l_filter.Anchor" type="System.Windows.Forms.AnchorStyles, System.Windows.Forms">
-    <value>Right</value>
-  </data>
-  <data name="&gt;&gt;b_startstop.ZOrder" xml:space="preserve">
-    <value>4</value>
-  </data>
-  <data name="b_test.Size" type="System.Drawing.Size, System.Drawing">
-    <value>75, 22</value>
-  </data>
-  <data name="&gt;&gt;tb_msgtext.Type" xml:space="preserve">
-    <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;l_scrfolder.Name" xml:space="preserve">
-    <value>l_scrfolder</value>
-  </data>
-  <data name="&gt;&gt;l_msgtext.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="b_test.Location" type="System.Drawing.Point, System.Drawing">
-    <value>384, 10</value>
-  </data>
-  <data name="l_msgtext.Size" type="System.Drawing.Size, System.Drawing">
-    <value>73, 13</value>
-  </data>
-  <data name="l_msgtext.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 68</value>
-  </data>
-  <data name="$this.Text" xml:space="preserve">
-    <value>DSAS</value>
-  </data>
-  <data name="&gt;&gt;b_browse.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="tb_msgtext.TabIndex" type="System.Int32, mscorlib">
-    <value>1</value>
-  </data>
-  <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>520, 121</value>
-  </data>
-  <data name="l_scrfolder.TabIndex" type="System.Int32, mscorlib">
-    <value>3</value>
-  </data>
-  <data name="&gt;&gt;$this.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Form, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="trayMenuStrip.Size" type="System.Drawing.Size, System.Drawing">
-    <value>104, 48</value>
-  </data>
-  <data name="&gt;&gt;tb_scrfolder.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;l_msgtext.Name" xml:space="preserve">
-    <value>l_msgtext</value>
-  </data>
-  <data name="l_scrfolder.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="b_startstop.TabIndex" type="System.Int32, mscorlib">
-    <value>5</value>
-  </data>
-  <data name="l_webhookurl.Text" xml:space="preserve">
-    <value>Webhook URL:</value>
-  </data>
-  <data name="l_msgtext.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="tb_scrfolder.TabIndex" type="System.Int32, mscorlib">
-    <value>1</value>
-  </data>
-  <metadata name="trayIcon.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>186, 17</value>
-  </metadata>
-  <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
-    <value>True</value>
-  </metadata>
-  <metadata name="trayMenuStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>299, 17</value>
-  </metadata>
-  <metadata name="folderBrowserDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
 </root>
