--- a/DSAS/Form1.ru-RU.resx
+++ b/DSAS/Form1.ru-RU.resx
@@ -426,6 +426,12 @@
   <data name="l_filter.Text" xml:space="preserve">
     <value>Фильтр:</value>
   </data>
+  <data name="l_msgtext.Size" type="System.Drawing.Size, System.Drawing">
+    <value>100, 13</value>
+  </data>
+  <data name="l_msgtext.Text" xml:space="preserve">
+    <value>Текст сообщения:</value>
+  </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAEAQEAAAAEAIAAoQgAAFgAAACgAAABAAAAAgAAAAAEAIAAAAAAAAEAAABMLAAATCwAAAAAAAAAA
@@ -715,7 +721,7 @@
   </data>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>Inherit</value>
+    <value>NoControl</value>
   </data>
   <data name="$this.Text" xml:space="preserve">
     <value>Авто-отправщик скриншотов</value>
